2008-08-14  Marek Habersack  <mhabersack@novell.com>

	* Makefile: allow compiling with the DEBUG, TRACE and MONO_TRACE
	preprocessor symbols defined.

2008-06-18  Marek Habersack  <mhabersack@novell.com>

	* System.Web.dll.sources: added
	System.Web.Caching/SqlCacheDependency.cs

2008-04-18  Marek Habersack  <mhabersack@novell.com>

	* Makefile (OTHER_LIB_MCS_FLAGS): remove dependency on
	System.Windows.Forms and define INSIDE_SYSTEM_WEB during
	compilation.

	* System.Web.dll.sources: include
	../Managed.Windows.Forms/System.Resources/ResXResourceReader.cs
	../Managed.Windows.Forms/System.Resources/ResXResourceWriter.cs		
	../Managed.Windows.Forms/System.Resources/ResXFileRef.cs
	../Managed.Windows.Forms/System.Resources/ResXDataNode.cs
	../Managed.Windows.Forms/System.Resources/ResXNullRef.cs
	directly.

2008-04-09  Marek Habersack  <mhabersack@novell.com>

	* System.Web.dll.sources: added System.Web.Compilation/AppWebReferencesCompiler.cs

2008-04-08  Marek Habersack  <mhabersack@novell.com>

	* System.Web.dll.sources: added System.Web/VirtualPath.cs

2008-03-09  Dean Brettle <dean@brettle.com> 

	* System.Web_test.dll.sources: added
		System.Web.UI.WebControls.Adapters/MenuAdapterTest.cs
		System.Web.UI.WebControls.Adapters/WebControlAdapterTest.cs
		System.Web.UI.WebControls.Adapters/HierarchicalDataBoundControlAdapterTest.cs
		System.Web.UI.WebControls.Adapters/DataBoundControlAdapterTest.cs
		System.Web.UI.WebControls.Adapters/HideDisabledControlAdapterTest.cs
		System.Web.UI.Adapters/PageAdapterTest.cs
		System.Web.UI.Adapters/ControlAdapterTest.cs
		
	* Makefile (RESOURCE_FILES_2): added
		System.Web.Configuration_2.0/RandomRoboBotKeywords.txt

	* Makefile (TEST_RESOURCE_FILES): added 
		Test/mainsoft/NunitWebResources/PageWithAdapter.aspx

	* System.Web.dll.sources: added
		System.Web.Configuration_2.0/CapabilitiesBuild.cs
		System.Web.Configuration_2.0/CapabilitiesChecksum.cs
		System.Web.Configuration_2.0/CapabilitiesResult.cs